--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="flex gap-8 text-sm font-medium text-gray-400">
             <li><a href="#hero" class="hover:text-white transition-colors">Home</a></li>
             <li><a href="#blog" class="hover:text-white transition-colors">Posts</a></li>
-            <li><a href="#" class="hover:text-white transition-colors">About</a></li>
+            <li><a href="#admin" class="hover:text-cyan-400 transition-colors flex items-center gap-1"><span class="text-xs">🔒</span> Admin</a></li>
           </ul>
         </nav>
       </header>
